--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "dev": "nodemon app.js"
   },
   "author": "",
@@ -26,7 +27,7 @@
     "passport-local-mongoose": "^6.0.1"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
+    
     "nodemon": "^2.0.4"
   }
 }
